# OpenEnergyID

./: .cache.sqlite  .gitattributes  .gitignore  .pre-commit-config.yaml  DEVELOPERS.md  LICENSE  README.md  ai.ignore  demo_baseLoad.ipynb  demo_battery_sim.ipynb  demo_battery_sim_with_evaluation.ipynb  demo_capacity_analysis.ipynb  demo_chained_pv_and_battery_sim.ipynb  demo_dyntar_analysis.ipynb  demo_energiedelen.ipynb  demo_energyid_download.ipynb  demo_mvlr.ipynb  demo_pv_sim_with_evaluation.ipynb  demo_pvsimulation.ipynb  demo_simeval.ipynb  download_prices.ipynb  new_baseload.ipynb  openmeteo.ipynb  oscar.ipynb  pandera_poc.ipynb  performance_testing.ipynb  pv_evolution.ipynb  pv_localization.ipynb  pvlib.ipynb  pyproject.toml  pyprojectOLD.toml  requirements-dev.txt  requirements.txt  simeval.ipynb
.devcontainer/: devcontainer.json  post-install.sh
.github/workflows/: python-publish-old.yml  python-publish.yml
data/: da_prices_be.csv  da_prices_be.json
data/PP/: energy_use.json  energy_use2Vin.ndjson  energy_use_big.ndjson  energy_use_test1.ndjson  energy_use_test2.ndjson  gapped_series.json  leobeo_2024.ndjson  leobeo_2025.ndjson
data/capacity/: EA-14214640.json  capacity_output.json  elec_sample.json  elec_sample2.json  electricity_delivered_sample.json  electricity_delivered_sample2.json  electricity_delivered_series_json_sample.json  power_sample.json
data/dyntar/: demo_dyntar_analysis.html  sample.json  sample_output.json
data/energiedelen/: sample_input.json
data/mvlr/: sample_gas.json  sample_solar.json
data/pv_analysis/: pv_long_term_analysis_input.json  pv_production_and_solar_radiation.json
data/sim/: chained_input.json
data/simeval/: sample.json
docs/specs/: nighttime-baseload-analysis.md
openenergyid/: __init__.py  const.py  enums.py  main.py  models.py
openenergyid/abstractsim/: __init__.py  abstract.py
openenergyid/baseload/: __init__.py  analysis.py  exceptions.py  main.py  models.py  polars_old.py  test.py
openenergyid/battsim/: README.md  __init__.py  abstract.py  main.py
openenergyid/battsim/selfconsumption/: __init__.py  main.py
openenergyid/capacity/: PowerAnalysis.py  __init__.py  main.py  models.py
openenergyid/dyntar/: __init__.py  const.py  main.py  models.py
openenergyid/elia/: __init__.py  api.py  const.py
openenergyid/energysharing/: __init__.py  const.py  data_formatting.py  main.py  models.py
openenergyid/mvlr/: __init__.py  helpers.py  main.py  models.py  mvlr.py
openenergyid/pandera_poc/: __init__.py  analysis.py  models.py
openenergyid/pv_evolution/: __init__.py  main.py  models.py
openenergyid/pvsim/: __init__.py  abstract.py  load_factor.py  main.py
openenergyid/pvsim/elia/: __init__.py  main.py
openenergyid/pvsim/pvlib/: __init__.py  main.py  models.py  quickscan.py  weather.py
openenergyid/sim/: __init__.py  main.py
openenergyid/simeval/: __init__.py  main.py  models.py
openenergyid/simulations/: __init__.py  abstract.py  main.py
openenergyid/utils/: __init__.py  regression.py
tests/: nb.py  test_baseload.py  test_main.py
tests/baseload/: test_nighttime_analysis.py
tests/dyntar/: __init__.py  test_summarize_result.py
tests/pv_evolution/: test_analysis.py
tests/pvsim/: test_pvlib_weather.py
