[project]
name = "openenergyid"
version = "0.1.32"
description = "Open Source Python library for energy analytics and simulations"
authors = [
    { name = "Jan Pecinovsky", email = "jan@energieid.be" },
    { name = "Max Helskens", email = "max@energieid.be" },
    { name = "Oscar Swyns", email = "oscar@energieid.be" }
]
readme = "README.md"
license = "MIT"
keywords = ["energy", "analytics", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "pandera[polars]>=0.22.1",
    "pvlib>=0.13.0",
    "pydantic>=2.8.2",
    "statsmodels>=0.14.2",
]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "altair>=5.5.0",
    "deptry>=0.23.0",
    "energyid>=0.0.17",
    "entsoe-py>=0.6.19",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "pandoc>=2.4",
    "pip>=25.1.1",
    "plotly>=6.1.2",
    "pyarrow>=20.0.0",
    "pyinstrument>=5.0.2",
    "pytest>=8.4.0",
    "seaborn>=0.13.2",
    "snakeviz>=2.2.2",
    "vegafusion>=2.0.2",
    "vl-convert-python>=1.8.0",
]

[tool.setuptools.packages.find]
include = ["openenergyid*"]
